bid success list

--- a/app/src/main/res/layout/item_cart_list.xml
+++ b/app/src/main/res/layout/item_cart_list.xml
@@ -33,8 +33,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
             android:layout_gravity="center_horizontal"
             android:orientation="vertical"
             app:cardCornerRadius="10dp"
-            app:cardElevation=".5dp"
-            app:cardMaxElevation="5dp"
+            app:cardElevation="3dp"
             app:cardBackgroundColor="@android:color/white"
             tools:layout_marginLeft="20dp"
             tools:layout_marginRight="20dp"
@@ -377,7 +376,7 @@ too. layout_gravity="center_horizontal" is a lot simpler.
                                     style="@style/MyButtonShapeRounded"
                                     android:layout_width="@dimen/dp_250"
                                     android:layout_height="wrap_content"
-                                    android:backgroundTint="@color/lblue40"
+                                    android:backgroundTint="@color/lblue60"
                                     android:fontFamily="@font/lexend_deca"
                                     android:gravity="center"
                                     android:insetTop="3dp"
