--- a/app/src/main/res/drawable/main_gradient_background.xml
+++ b/app/src/main/res/drawable/main_gradient_background.xml
@@ -5,6 +5,6 @@
         android:type="linear"
         android:angle="90"
         android:endColor="@color/white"
-        android:startColor="@color/bgray" />
+        android:startColor="@color/white" />
 
 </shape>
