--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/main_gradient_background"
+    android:backgroundTint="@color/white"
     android:orientation="vertical">
 
     <com.google.android.material.appbar.AppBarLayout
@@ -54,15 +54,14 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-<!--        <ImageView-->
-<!--            android:id="@+id/backgroundshape1"-->
-<!--            android:layout_width="0dp"-->
-<!--            android:layout_height="0dp"-->
 
-<!--            android:background="@drawable/roundedsquare"-->
-<!--            android:backgroundTint="@color/lgray10"-->
-<!--            android:rotation="-30"-->
-<!--            />-->
+        <ImageView
+            android:id="@+id/backgroundshape1"
+            android:layout_width="0dp"
+            android:layout_height="0dp"
+            android:background="@drawable/backgroundpattern"
+            />
+
 
         <RelativeLayout
             android:layout_width="match_parent"
@@ -106,7 +105,7 @@
                 app:abb_animationInterpolator="@android:anim/overshoot_interpolator"
                 app:abb_iconSize="20dp"
                 app:abb_indicatorAppearance="round"
-                app:abb_indicatorColor="@color/lblue30"
+                app:abb_indicatorColor="@color/lblue60"
                 app:abb_indicatorHeight="4dp"
                 app:abb_indicatorMargin="16dp"
                 app:abb_selectedIndex="1"
@@ -115,7 +114,7 @@
                 app:abb_tabAnimationSelected="slide"
                 app:abb_tabColor="@color/egray40"
                 app:abb_tabColorDisabled="@color/egray40"
-                app:abb_tabColorSelected="@color/lblue30"
+                app:abb_tabColorSelected="@color/lblue60"
                 app:abb_tabs="@menu/tabs"
                 app:abb_textAppearance="@style/BottomNavigationTextStyle"
                 app:abb_textSize="@dimen/dp_13" />
