--- a/app/src/main/res/layout/item_cart_bid_success_list.xml
+++ b/app/src/main/res/layout/item_cart_bid_success_list.xml
@@ -32,8 +32,6 @@
                 app:layout_constraintGuide_percent=".7"/>
 
 
-
-
             <TextView
                 android:id="@+id/prd_auction_type"
                 android:layout_width="wrap_content"
@@ -98,6 +96,70 @@
                 />
 
 
+            <TextView
+                android:id="@+id/prd_prdwgt_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="중량"
+                android:gravity="center"
+                android:textSize="@dimen/dp_8"
+                android:layout_marginTop="@dimen/dp_5"
+                android:autoSizeMaxTextSize="@dimen/dp_8"
+                android:autoSizeMinTextSize="@dimen/dp_5"
+                android:textColor="@color/egray70"
+                android:fontFamily="@font/lexend_deca"
+                app:layout_constraintTop_toBottomOf="@id/prd_totseqNm"
+                app:layout_constraintStart_toStartOf="@id/prd_totseqNm"
+                />
+
+            <TextView
+                android:id="@+id/prd_prdwgt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="1500kg"
+                android:gravity="center"
+                android:textSize="@dimen/dp_13"
+                android:autoSizeMaxTextSize="@dimen/dp_8"
+                android:autoSizeMinTextSize="@dimen/dp_5"
+                android:textColor="@color/egray70"
+                android:fontFamily="@font/lexend_deca"
+                app:layout_constraintTop_toBottomOf="@id/prd_prdwgt_txt"
+                app:layout_constraintStart_toStartOf="@id/prd_totseqNm"
+                />
+
+
+            <TextView
+                android:id="@+id/prd_bid_txt"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="낙찰가"
+                android:gravity="center"
+                android:textSize="@dimen/dp_8"
+                android:layout_marginTop="@dimen/dp_5"
+                android:autoSizeMaxTextSize="@dimen/dp_8"
+                android:autoSizeMinTextSize="@dimen/dp_5"
+                android:textColor="@color/egray70"
+                android:fontFamily="@font/lexend_deca"
+                app:layout_constraintTop_toBottomOf="@id/prd_prdwgt"
+                app:layout_constraintStart_toStartOf="@id/prd_totseqNm"
+                />
+
+            <TextView
+                android:id="@+id/prd_bid"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="2300원"
+                android:gravity="center"
+                android:textSize="@dimen/dp_13"
+                android:autoSizeMaxTextSize="@dimen/dp_8"
+                android:autoSizeMinTextSize="@dimen/dp_5"
+                android:textColor="@color/egray70"
+                android:fontFamily="@font/lexend_deca"
+                app:layout_constraintTop_toBottomOf="@id/prd_bid_txt"
+                app:layout_constraintStart_toStartOf="@id/prd_totseqNm"
+                />
+
+
             <androidx.cardview.widget.CardView
                 android:id="@+id/amountcard"
                 android:layout_width="match_parent"
@@ -108,7 +170,7 @@
                 app:contentPadding="@dimen/dp_7"
                 app:cardUseCompatPadding="true"
                 app:cardElevation="@dimen/dp_0"
-                app:cardBackgroundColor="@color/lblue40"
+                app:cardBackgroundColor="@color/lblue20"
                 app:layout_constraintCircleRadius="@dimen/dp_10">
 
                 <androidx.constraintlayout.widget.ConstraintLayout
@@ -125,7 +187,7 @@
                         android:textSize="@dimen/dp_6"
                         android:autoSizeMaxTextSize="@dimen/dp_8"
                         android:autoSizeMinTextSize="@dimen/dp_5"
-                        android:textColor="@color/egray20"
+                        android:textColor="@color/egray80"
                         android:fontFamily="@font/lexend_deca"
                         app:layout_constraintTop_toTopOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
@@ -138,7 +200,7 @@
                         android:fontFamily="@font/lexend_deca"
                         android:text="10000원"
                         android:textSize="@dimen/dp_15"
-                        android:textColor="@color/white"
+                        android:textColor="@color/egray80"
                         app:layout_constraintTop_toBottomOf="@id/auc_bid_txt"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintStart_toStartOf="parent"/>
